add br paragraph

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <p>This is my first paragraph</p>
 
     <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo">Gojo Satoru Biography</a>
-
     <img src="Imagenes/gojo.jpg" alt="Gojo Imagen" width="240" height="300">
+
+    <p>This is a paragraph <br>whit a break br</p>
 
 
 </body>
