--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <p>This is a paragraph <br>whit a break br</p>
 
+    <p style="color:rgb(121, 121, 170)">Here there's a purple paragraph</p>
 
 </body>
 
