single or double quotes

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 
     <p>This is a paragraph <br>whit a break br</p>
 
-    <p style="color:rgb(121, 121, 170)">Here there's a purple paragraph</p>
+    <p style="color:rgb(121, 121, 170)">Here there's a purple  paragraph</p>
 
+    <p title='Gojo "Yuji" Nobara'>
+    <p title='Gojo "Yuji" Nobora'></p>
+
+    </p>
 </body>
 
 
