h1 with font size px

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
     <p style="color:rgb(121, 121, 170)">Here there's a purple  paragraph</p>
 
-    <p title='Gojo "Yuji" Nobara'>
+    <p title='Gojo "Yuji" Nobara'></p>
     <p title='Gojo "Yuji" Nobora'></p>
+
+    <h1 style="font-size: 40px;">This is a title with font size</h1>
 
     </p>
 </body>
