text alignment o alineacion

--- a/index.html
+++ b/index.html
@@ -45,9 +45,16 @@ tagnames
     <h1 style="font-size: 33px">im 33px</h1>
     <p style="color:rgb(121, 121, 170)">Here there's a purple  paragraph</p>
     <hr>
-    <p>font family</p>
+    <p>font family tipo de letra</p>
     <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">paragragh 1</p>
     <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">paragraph 2</p>
+    <hr>
+    <p>text alignment alineacion</p>
+    <h1 style="text-align: center;">Text center </h1>
+    <p style="text-align:center;">other text center but is a paragraph</p>
+    <h2 style="text-align: right;">text right</h2>
+    <h4 style="text-align: inherit;">inherit????</h4>
+
 </body>
 
 
