--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@ tagnames
     <h2 style="text-align: right;">text right</h2>
     <h4 style="text-align: inherit;">inherit????</h4>
 
+<hr>
+<p>text formating</p>
+<p><b>text bold</b></p>
+<p><b>bold text</b></p>
+<p><strong>Inmport text??</strong> is this strong?</p>
+<p><mark>Texto marcado</mark> this is not marked</p>
+<p><small>am i small?</small> oh, i dont know</p>
+<p><del>am i eliminated?</del>.....</p>
+<p><ins>i dont know what is this</ins> laaaa</p>
+<p>hola <sup>arribaaaa</sup> normal de nuevo</p>
+<p>heeey <sup>abajoooo</sup> de nuevo normal</p>
 </body>
 
 
