quotes and abbr, citas y abreviacion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page document</title>
+    <title>HTML MENTOS</title>
 </head>
 
 <body style="background-color:azure;">
@@ -58,6 +58,8 @@ tagnames
 <hr>
 <p>text formating</p>
 <p><b>text bold</b></p>
+<i>this is italic</i>
+<p><em>emphasis text? </em> or not?</p>
 <p><b>bold text</b></p>
 <p><strong>Inmport text??</strong> is this strong?</p>
 <p><mark>Texto marcado</mark> this is not marked</p>
@@ -67,7 +69,22 @@ tagnames
 <p>hola <sup>arribaaaa</sup> normal de nuevo</p>
 <p>heeey <sup>abajoooo</sup> de nuevo normal</p>
 </body>
+<hr>
 
+<p>Here is a quote from WWF's website:</p>
+
+<blockquote cite="https://onx.la/c2997">
+    A sprint is a short, time-boxed period when a scrum team works to complete a set amount of work. Sprints are at the very heart of scrum and agile methodologies, and getting sprints right will help your agile team ship better software with fewer headaches.  
+</blockquote>
+<hr>
+
+<!-- two q at the same q-->
+<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+
+<p>The <abbr title="World Health Organization">organism</abbr> was founded in 1948.</p>
+<p>this is used to display another text or acronym</p>
+
+<hr>
 
 
 </html>
