--- a/index.html
+++ b/index.html
@@ -83,8 +83,26 @@ tagnames
 
 <p>The <abbr title="World Health Organization">organism</abbr> was founded in 1948.</p>
 <p>this is used to display another text or acronym</p>
-
 <hr>
+
+<address>
+Written by Gama Mentos Dev <br>
+Visit my others project at:  <br>
+Mexico <br>
+</address>
+<hr>
+
+<p>tag html defines the title</p>
+<p>Often display the cite in letter italic</p>
+
+<img src="https://pbs.twimg.com/media/EZ7C1D_U0AMnfeM.jpg:large" width="230" height="250" alt="Gojo's Euphoria">
+<p><cite>Gojo's Euphoria</cite> by Akutami Gege. Painted in 2019.</p>
+<br>
+
+<!--Change the orden the phrase first right to left-->
+<p>bi-directional override (bdo), right to left (rtl):</p>
+<bdo dir="rtl">JJK will end in 5 caps</bdo> <br>
+
 
 
 </html>
