h1 color changes with %

--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@ tagnames
 <p><strong>Inmport text??</strong> is this strong?</p>
 <p><mark>Texto marcado</mark> this is not marked</p>
 <p><small>am i small?</small> oh, i dont know</p>
+<!--borra con del xd---->
 <p><del>am i eliminated?</del>.....</p>
 <p><ins>i dont know what is this</ins> laaaa</p>
 <p>hola <sup>arribaaaa</sup> normal de nuevo</p>
-<p>heeey <sup>abajoooo</sup> de nuevo normal</p>
-</body>
+<p>heeey <sub>abajoooo</sub> de nuevo normal</p>
+
 <hr>
 
 <p>Here is a quote from WWF's website:</p>
@@ -79,7 +80,7 @@ tagnames
 <hr>
 
 <!-- two q at the same q-->
-<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+<p>WWF's goal is to: <q>Build a future where people live in harmony with natureeee</q></p>
 
 <p>The <abbr title="World Health Organization">organism</abbr> was founded in 1948.</p>
 <p>this is used to display another text or acronym</p>
@@ -103,6 +104,28 @@ Mexico <br>
 <p>bi-directional override (bdo), right to left (rtl):</p>
 <bdo dir="rtl">JJK will end in 5 caps</bdo> <br>
 
+<hr>
+<h2 style="font-size: 50px;">Color names</h2>
+<h1 style="background-color:Tomato;">Tomato</h1>
+<h1 style="background-color: darkseagreen;">darkseagreen</h1>
+<!--theres one hundred forty colors-->
+<hr>
+color letters
+<h1 style="color:blueviolet"> Text Blueviolet</h1>
+<h2 style="color: rgb(43, 43, 77);">color 43, 43, 77</h2>
+border Color
+<h1 style="border:1px solid seagreen;">This is my first border</h1>
+<h2 style="border: 2px solid blue">this is my second border <br> here continues</h2>
 
+<h3 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Text Values</h3>
+<h1 style="background-color:rgb(255, 99, 71);">........................</h1>
+<h1 style="background-color:rgba(255, 99, 71, 0.80);">.................</h1>
+<h1 style="background-color:rgba(255, 99, 71, 0.60);">.................</h1>
+<h1 style="background-color:rgba(255, 99, 71, 0.40);">.................</h1>
+<h1 style="background-color:hsla(9, 100%, 64%, 0.20);">................</h1>
+<h1 style="background-color:rgba(255, 99, 71, 0.0);">..................</h1>
+
+
+</body>
 
 </html>
