--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
 
 
 a:link, a:visited{
-    background-color: antiquewhite;
+    background-color: rgb(243, 239, 234);
     color: rgb(76, 55, 94);
     padding: 12px, 30px;
     text-align: right;
@@ -26,10 +26,79 @@ a:hover, a:active{
 </style>
 
 </head>
+
 <body style="background-color: ghostwhite;">
     <h3>Link buttons</h3>
 <p>Un link estilizado como boton</p>
 <a href="https://mangaplus.shueisha.co.jp/titles/200018" target="_blank">Jujutsu kaisen</a>
 
+<hr>
+
+<p style="color: blueviolet;"><a href="#C4">Arco del Entrenamiento maldito</a></p>
+<p style="color: blueviolet;"><a href="#C10">Arco de ejecucion</a></p>
+
+<h2 id="C1">Arco de la infancia maldita</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2 id="C2">Arco de introduccion</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Arco de El Útero Maldito</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2 id="C4">Arco de El Entrenamiento Maldito</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Arco de El Enfrentamiento con Mahito</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Arco de El Festival de Intercambio con Kioto</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>	Arco de El Origen de la Obediencia</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>	Arco de El Recipiente de Plasma Estelar</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Arco de El Incidente de Shibuya</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2 id="C10">Arco de Ejecución</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Arco de Haciendo Las Preparaciones</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>Arco de El Viaje a la Extinción</h2>
+<p>This chapter explains ba bla bla</p>
+<p>Regresar al arco para tener mejor context:</p>
+<p style="color: blueviolet;"><a href="#C2">Arco de ejecucion</a></p>
+
+<h2>Arco de la Batalla en el area desabitada en Shinjuku</h2>
+<p>This chapter explains ba bla bla</p>
+
+<hr>
+
+<h3>Floating images</h3>
+<p><strong>Img to Float: Unset</strong></p>
+
+<p>
+<img src="https://img.wattpad.com/ac395317a15a1a394c271f91cfc0604557cf16d5/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f784e6936765a34704757367653413d3d2d313037323238343434372e313638303338623632653133393338363632393230313938303035332e6a7067?s=fit&w=720&h=720" 
+alt="Satoru Gojo", style="float:unset; width: 80px; height:70px;">
+Icon Gojo Satoru
+</p>
+
+<!--deben tener el mismo valor usemap and map name-->
+<img src="Imagenes/gojovsukuna.jpg" alt="Gojo vs Sukuna" usemap="#workmap">
+<map name="workmap" >
+    <area shape="circle" coords="370,190,60" href="https://somoskudasai.com/noticias/cultura-otaku/fans-de-jujutsu-kaisen-lloran-la-muerte-de-un-querido-personaje/" alt="Gojo" target="_blank">
+    <area shape="circle" coords="810,170,60" href="https://www.sdpnoticias.com/geek/sukuna-muere-en-jujutsu-kaisen-el-capitulo-268-del-manga-de-gege-akutami-lo-responde/" alt="Sukuna" target="_blank">
+</map>
+
+
+
+
+<footer>Derechos reservados por Gamaliel</footer>
 </body>
 </html>
