imagen como fonde de texto

--- a/index3.html
+++ b/index3.html
@@ -10,8 +10,8 @@
 
 
 a:link, a:visited{
-    background-color: rgb(243, 239, 234);
-    color: rgb(76, 55, 94);
+    background-color: rgb(158, 207, 219);
+    color: rgb(100, 8, 180);
     padding: 12px, 30px;
     text-align: right;
     text-decoration: dashed;
@@ -23,11 +23,26 @@ a:hover, a:active{
     color: black;
 }
 
+h2{
+    color: cornflowerblue;
+}
+
+p{
+    color: black;
+}
+
+h3{
+color: rgb(253, 38, 153);
+background-color: rgb(193, 215, 235);
+display: inline;
+text-align: right;
+}
+
 </style>
 
 </head>
 
-<body style="background-color: ghostwhite;">
+<body style="background-color:ghostwhite">
     <h3>Link buttons</h3>
 <p>Un link estilizado como boton</p>
 <a href="https://mangaplus.shueisha.co.jp/titles/200018" target="_blank">Jujutsu kaisen</a>
@@ -76,7 +91,10 @@ a:hover, a:active{
 <p style="color: blueviolet;"><a href="#C2">Arco de ejecucion</a></p>
 
 <h2>Arco de la Batalla en el area desabitada en Shinjuku</h2>
-<p>This chapter explains ba bla bla</p>
+<p style="background-color: rgb(197, 219, 197); color: black; font-family: 'Lucida Sans', 
+'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; display:inline-table; ">
+ARCO ACTUAL DEL MANGA</p>
+
 
 <hr>
 
@@ -97,7 +115,30 @@ Icon Gojo Satoru
 </map>
 
 
-
+<p style="background-image: url(Imagenes/gojoo.jpg); color: aliceblue;  padding: 1px; " >
+    <strong>
+    Satoru Gojo (五条悟 Gojō Satoru?) en la serie de manga y anime Jujutsu Kaisen
+    <br>
+        , Gojo desempeña el papel de maestro de la clase de primer año en la escuela 
+        <br>
+        de magia de Tokio, donde se encuentran los tres protagonistas principales:
+        <br> 
+        Yūji Itadori, Megumi Fushiguro y Nobara Kugisaki. Su personalidad a menudo 
+        <br>
+        se presenta como descuidada y poco respetuosa hacia sus superiores.4​ 
+        <br>
+        Aunque Gojo aparece desde el inicio de Jujutsu Kaisen, 
+        <br>
+        su debut oficial se produce en el capítulo 
+        <br>
+        «El niño maldito» de la precuela Jujutsu Kaisen 0, 
+        <br>
+        donde es interpretado por Yūta Okkotsu, un alumno
+        <br> 
+        del pasado con quien tiene una conexión importante.
+        <br>
+    </strong>
+</p>
 
 <footer>Derechos reservados por Gamaliel</footer>
 </body>
