imagen without repeat

--- a/index3.html
+++ b/index3.html
@@ -42,7 +42,7 @@ text-align: right;
 
 </head>
 
-<body style="background-color:ghostwhite">
+<p style="background-color:ghostwhite">
     <h3>Link buttons</h3>
 <p>Un link estilizado como boton</p>
 <a href="https://mangaplus.shueisha.co.jp/titles/200018" target="_blank">Jujutsu kaisen</a>
@@ -139,6 +139,36 @@ Icon Gojo Satoru
         <br>
     </strong>
 </p>
+
+<hr>
+<p>This imagen wont be repeat</p>
+<p style="background-image: url(Imagenes/gojoo.jpg); color: aliceblue;  padding: 1px; 
+background-repeat: no-repeat;" >
+    <strong>
+    Satoru Gojo (五条悟 Gojō Satoru?) en la serie de manga y anime Jujutsu Kaisen
+    <br>
+        , Gojo desempeña el papel de maestro de la clase de primer año en la escuela 
+        <br>
+        de magia de Tokio, donde se encuentran los tres protagonistas principales:
+        <br> 
+        Yūji Itadori, Megumi Fushiguro y Nobara Kugisaki. Su personalidad a menudo 
+        <br>
+        se presenta como descuidada y poco respetuosa hacia sus superiores.4​ 
+        <br>
+        Aunque Gojo aparece desde el inicio de Jujutsu Kaisen, 
+        <br>
+        su debut oficial se produce en el capítulo 
+        <br>
+        «El niño maldito» de la precuela Jujutsu Kaisen 0, 
+        <br>
+        donde es interpretado por Yūta Okkotsu, un alumno
+        <br> 
+        del pasado con quien tiene una conexión importante.
+        <br>
+    </strong>
+</p>
+
+
 
 <footer>Derechos reservados por Gamaliel</footer>
 </body>
