--- a/indexcss.html
+++ b/indexcss.html
@@ -15,7 +15,8 @@ p{border: 2px solid cornflowerblue;}
 p{padding: 5px;}
 p{margin: 9px;}
 
-tagname{padding: 15px}
+tagname{padding: 20px}
+tagname{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
 
 a:link {
