--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML MENTOS</title>
 </head>
 
-<body style="background-color:azure;">
+<body style="background-color:rgb(157, 201, 201);">
 tagnames
 <hr>
     <tagname>Content goes here 1 </tagname>
@@ -32,7 +32,7 @@ tagnames
     The Strongest
     DEP
 </pre>
-    <p>This is a paragraph <br>whit a break br</p>
+    <p>This is a paragraph <br>whit a break <br>br <br>tag</p>
 
     
 <hr>
@@ -56,6 +56,7 @@ tagnames
     <h4 style="text-align: inherit;">inherit????</h4>
 
 <hr>
+
 <p>text formating</p>
 <p><b>text bold</b></p>
 <i>this is italic</i>
