--- a/index4.html
+++ b/index4.html
@@ -12,17 +12,20 @@
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  text-align: center;
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid #787a76;
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #bae187;
 }
+
+
 </style>
 <body>
 
